testing/tests/ui/as-primitive-type.stderr
error: `as` operator expects the name of a primitive type on its right-hand side
       failed to parse template source at row 1, column 3 near:
       "1234 as 4567 }}"
 --> tests/ui/as-primitive-type.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side
       failed to parse template source at row 1, column 3 near:
       "1234 as ? }}"
 --> tests/ui/as-primitive-type.rs:7:10
  |
7 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `u1234`
       failed to parse template source at row 1, column 3 near:
       "1234 as u1234 }}"
  --> tests/ui/as-primitive-type.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `core`
       failed to parse template source at row 1, column 3 near:
       "1234 as core::primitive::u32 }}"
  --> tests/ui/as-primitive-type.rs:15:10
   |
15 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
       failed to parse template source at row 1, column 3 near:
       "1234 as int32_t }}"
  --> tests/ui/as-primitive-type.rs:19:10
   |
19 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
